Fix editar profesor, resuelvo warnings

--- a/src/main/resources/templates/listas/lista_profesores.html
+++ b/src/main/resources/templates/listas/lista_profesores.html
@@ -293,6 +293,7 @@
             <th class="col-sm-1">Apellido</th>
             <th class="col-sm-1">Telefono</th>
             <th class="col-sm-1">Dni</th>
+            <th class="col-sm-1">Matrícula</th>
             <th class="col-sm-1">Acciones</th>
           </tr>
         </thead>
@@ -303,6 +304,7 @@
             <td th:text="${profesor.apellidoProf}"></td>
             <td th:text="${profesor.telefonoProf}"></td>
             <td th:text="${profesor.dniProf}"></td>
+            <td th:text="${profesor.matriculaProf}"></td>
 
             <td>
               <div class="d-flex align-items-stretch">
