agrego horarios a pdf

--- a/src/main/resources/templates/listas/lista_clases.html
+++ b/src/main/resources/templates/listas/lista_clases.html
@@ -162,7 +162,7 @@
                 <a class="dropdown-item" href="/admin/lista_clases/export"
                   >Listado de clases</a
                 >
-                <a class="dropdown-item" href="#">Horarios por clase</a>
+                <a class="dropdown-item" href="/admin/lista_horarios/export">Horarios por clase</a>
               </div>
             </div>
           </div>
