--- a/src/main/resources/templates/listas/lista_profesores_clases.html
+++ b/src/main/resources/templates/listas/lista_profesores_clases.html
@@ -96,7 +96,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="/admin/lista_profesores/export">Listado de profesores</a>
             <a class="dropdown-item" href="/admin/lista_clases/export">Listado de clases</a>
-            <a class="dropdown-item" href="#">Horarios por clase</a>
+            <a class="dropdown-item" href="/admin/lista_horarios/export">Horarios por clase</a>
           </div>
         </div>
       </div>
