--- a/src/main/resources/templates/listas/lista_horarios.html
+++ b/src/main/resources/templates/listas/lista_horarios.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/admin/lista_clases"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         
