profesor dni es long, mensaje de advertencia al eliminar clase, eliminar asistencia

--- a/src/main/resources/templates/asistencia_clase.html
+++ b/src/main/resources/templates/asistencia_clase.html
@@ -258,6 +258,9 @@
             <div class="card-header">
                 <a th:href="@{/admin/asistencia_manual/} + ${idProf} + '/' + ${clase.idClase}">Ingresar Asistencia de forma manual</a>
             </div>
+            <div class="card-header">
+              <a th:href="@{/admin/eliminar_asistencia_manual/} + ${idProf} + '/' + ${clase.idClase}">Eliminar una asistencia</a>
+          </div>
           </div>
         </div>
       </div>
