--- a/src/main/resources/templates/listas/lista_profesores_clases.html
+++ b/src/main/resources/templates/listas/lista_profesores_clases.html
@@ -149,7 +149,7 @@
                 </a>
               </div>
               <div class="p-2">
-                <a class ="btn btn-info" th:onclick="@{/admin/lista_horarios/}+${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Horarios">
+                <a class ="btn btn-info" th:href="@{/admin/lista_horarios/}+${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Horarios">
                   <span class="fas fa-clock"></span>
                 </a>
               </div>
