--- a/src/main/resources/templates/agregar_usuario.html
+++ b/src/main/resources/templates/agregar_usuario.html
@@ -112,21 +112,21 @@
                             </div>	
                             <div class="form-group">
                                 <label class= "mr-2" for="username">Nombre de usuario:</label>
-                                <input th:field="*{username}" type="text" id="username" name="username" class="form-control">
+                                <input th:field="*{username}" type="text" id="username" name="username" class="form-control" required>
                             </div>
                             <div class="form-group">
                                 <label class= "mr-2" for="password">Contraseña:</label>
-                                <input th:field="*{password}"type="password" id="password" name="password" class="form-control"/>
+                                <input th:field="*{password}"type="password" id="password" name="password" class="form-control" required/>
                             </div>
                             <div class="form-group">
-                                <input type="hidden" th:value="1" name="enabled" id="enabled">
+                                <input type="hidden"  th:value="1" name="enabled" id="enabled">
                             </div>   
                             <div class="form-group row">
                             	<!-- Seleccionar el rol -->
                                 <label th:text="Roles" class="col-lg-3 col-form-label form-control-label"></label>
                                 <div class="col-lg-9">
                                     <select required th:field="${user.authority}" class="form-control" size="3">
-                                        <option th:each="role :${roles}" th:value="${role.id}" th:text="administrador">
+                                        <option selected th:each="role :${roles}" th:value="${role.id}" th:text="administrador">
                                         </option>
                                     </select>
                                 </div>
