Registro manual de asistencias

--- a/src/main/resources/templates/forms/form_asistencia.html
+++ b/src/main/resources/templates/forms/form_asistencia.html
@@ -107,7 +107,7 @@
 
         <div class="card-body">
           <form
-            th:action="@{/admin/guardar_asistencia_manual}"
+            th:action="@{/admin/guardar_asistencia_manual/} + ${idProf} +'/'+ ${idClase}"
             th:object="${asistencia}"
             method="POST"
           >
